Match curly brace pt_BR

--- a/locale/pt_BR/LC_MESSAGES/meerk40t.po
+++ b/locale/pt_BR/LC_MESSAGES/meerk40t.po
@@ -2226,7 +2226,7 @@ msgid ""
 "{index}: stroke-width = {stroke_width}/{implied_stroke_width} - {name} - "
 "scaled-stroke"
 msgstr ""
-"{index}: largura-do-traço = stroke_width}/{implied_stroke_width} - {name} - traço-escalado"
+"{index}: largura-do-traço = {stroke_width}/{implied_stroke_width} - {name} - traço-escalado"
 
 #: meerk40t/core/elements.py:4366
 msgid ""
